unpackaged/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <displayFormat>R{YY}{000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>