unpackaged/main/default/objects/Request__c/fields/Actual_Completion__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion__c</fullName>
    <label>Actual Completion</label>
    <type>DateTime</type>
</CustomField>