unpackaged/main/default/objects/Request__c/fields/Actual_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Completion_Date__c</fullName>
    <formula>datevalue(Actual_Completion__c)</formula>
    <label>Actual Completion</label>
    <type>Date</type>
</CustomField>