unpackaged/main/default/objects/Request__c/fields/Admin_Priority__c.field-meta.xml
<CustomField>
    <fullName>Admin_Priority__c</fullName>
    <description>R165545</description>
    <label>Admin Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>