unpackaged/main/default/objects/Request__c/fields/Approved_by_finance__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R2024293</description>
    <label>Approved by finance</label>
    <type>Checkbox</type>
</CustomField>