unpackaged/main/default/objects/Request__c/fields/BA_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>BA_Collaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R1811423</description>
    <label>BA Collaborator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>