unpackaged/main/default/objects/Request__c/fields/BizSys_Details__c.field-meta.xml
<CustomField>
    <fullName>BizSys_Details__c</fullName>
    <label>BizSys Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>