unpackaged/main/default/objects/Request__c/fields/Business_Unit_Leader__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Leader__c</fullName>
    <label>Business Unit Leader</label>
    <length>30</length>
    <type>Text</type>
</CustomField>