unpackaged/main/default/objects/Request__c/fields/Business_Unit_Leader_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Leader_Email__c</fullName>
    <label>Business Unit Leader Email</label>
    <type>Email</type>
</CustomField>