unpackaged/main/default/objects/Request__c/fields/Changed_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Changed_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Changed Record Type</label>
    <type>Checkbox</type>
</CustomField>