unpackaged/main/default/objects/Request__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <formula>(Actual_Completion__c  -  Into_Development__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Hours from time request was picked up by Business Systems team to time it was completed.</inlineHelpText>
    <label>Completion Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>