unpackaged/main/default/objects/Request__c/fields/Consultant__c.field-meta.xml
<CustomField>
    <fullName>Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consultant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>