unpackaged/main/default/objects/Request__c/fields/Days_in_Development__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Development__c</fullName>
    <formula>if ( OR( ISPICKVAL( Stage__c , &#39;User Acceptance Testing&#39;) ,ISPICKVAL( Stage__c , &#39;Complete&#39;)), Into_User_Testing__c - DATEVALUE(Into_Development__c), if( ISPICKVAL( Stage__c , &#39;Developing&#39;), today() - DATEVALUE(Into_Development__c),NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Development</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>