unpackaged/main/default/objects/Request__c/fields/Days_Since_Requested__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Requested__c</fullName>
    <formula>if( ISPICKVAL( Stage__c , &#39;Complete&#39;),  DATEVALUE(Actual_Completion__c) -   DATEVALUE(Submitted__c) ,  today() -  DATEVALUE(Submitted__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>