unpackaged/main/default/objects/Request__c/fields/Days_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Complete__c</fullName>
    <formula>if ( ISPICKVAL( Stage__c , &#39;Complete&#39;),  DATEVALUE(Actual_Completion__c) - DATEVALUE(Submitted__c),Today() - DATEVALUE(Submitted__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>