unpackaged/main/default/objects/Request__c/fields/Days_to_Estimated_Completion__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Estimated_Completion__c</fullName>
    <formula>if ( ISPICKVAL( Stage__c , &#39;Delivered&#39;) , NULL,  Estimated_Completion__c - today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Estimated Completition</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>