unpackaged/main/default/objects/Request__c/fields/Department_s_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Department_s_Impacted__c</fullName>
    <description>R163888</description>
    <label>Department(s) Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>APM+</fullName>
            </value>
            <value>
                <fullName>APM Client Services</fullName>
            </value>
            <value>
                <fullName>APM Marketing</fullName>
            </value>
            <value>
                <fullName>APM Operations</fullName>
            </value>
            <value>
                <fullName>APM Sales</fullName>
            </value>
            <value>
                <fullName>Business Systems</fullName>
            </value>
            <value>
                <fullName>CA Segment</fullName>
            </value>
            <value>
                <fullName>Corporate Segment</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>IM Client Services</fullName>
            </value>
            <value>
                <fullName>IM Sales</fullName>
            </value>
            <value>
                <fullName>Mid Market Segment</fullName>
            </value>
            <value>
                <fullName>MyCase</fullName>
            </value>
            <value>
                <fullName>Order to Cash</fullName>
            </value>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Product/Engineering</fullName>
            </value>
            <value>
                <fullName>SMB Segment</fullName>
            </value>
            <value>
                <fullName>Value+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>