unpackaged/main/default/objects/Request__c/fields/Dev_Admin_Collaborator__c.field-meta.xml
<CustomField>
    <fullName>Dev_Admin_Collaborator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R1811423</description>
    <label>Dev/Admin Collaborator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>