unpackaged/main/default/objects/Request__c/fields/Dev_Priority__c.field-meta.xml
<CustomField>
    <fullName>Dev_Priority__c</fullName>
    <description>R165049</description>
    <label>Dev Priority</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>