unpackaged/main/default/objects/Request__c/fields/Emergency_Non_Standard_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Non_Standard_Deployment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1814725</description>
    <inlineHelpText>please include details in BysSys Details section of request</inlineHelpText>
    <label>Emergency /Non-Standard Deployment</label>
    <type>Checkbox</type>
</CustomField>