unpackaged/main/default/objects/Request__c/fields/Estimated__c.field-meta.xml
<CustomField>
    <fullName>Estimated__c</fullName>
    <label>Estimated</label>
    <type>Date</type>
</CustomField>