unpackaged/main/default/objects/Request__c/fields/Estimated_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion__c</fullName>
    <label>Estimated Completion</label>
    <type>Date</type>
</CustomField>