unpackaged/main/default/objects/Request__c/fields/Groomed__c.field-meta.xml
<CustomField>
    <fullName>Groomed__c</fullName>
    <label>Groomed</label>
    <type>Date</type>
</CustomField>