unpackaged/main/default/objects/Request__c/fields/Hours_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Hours_Estimate__c</fullName>
    <label>Hours Estimate OLD</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>