unpackaged/main/default/objects/Request__c/fields/Hours_Estimate_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Hours_Estimate_Picklist__c</fullName>
    <description>R163787</description>
    <label>Hours Estimate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-1</fullName>
            </value>
            <value>
                <fullName>1-5</fullName>
            </value>
            <value>
                <fullName>5-10</fullName>
            </value>
            <value>
                <fullName>10-20</fullName>
            </value>
            <value>
                <fullName>20-40</fullName>
            </value>
            <value>
                <fullName>40-80</fullName>
            </value>
            <value>
                <fullName>80+</fullName>
            </value>
            <value>
                <fullName>40+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>