unpackaged/main/default/objects/Request__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>