unpackaged/main/default/objects/Request__c/fields/Initiative__c.field-meta.xml
<CustomField>
    <fullName>Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1916267</description>
    <label>Initiative</label>
    <type>Checkbox</type>
</CustomField>