unpackaged/main/default/objects/Request__c/fields/Into_Development__c.field-meta.xml
<CustomField>
    <fullName>Into_Development__c</fullName>
    <label>Into Development</label>
    <type>DateTime</type>
</CustomField>