unpackaged/main/default/objects/Request__c/fields/Into_Development_Date__c.field-meta.xml
<CustomField>
    <fullName>Into_Development_Date__c</fullName>
    <formula>datevalue(Into_Development__c)</formula>
    <label>Into Development</label>
    <type>Date</type>
</CustomField>