unpackaged/main/default/objects/Request__c/fields/Into_User_Testing__c.field-meta.xml
<CustomField>
    <fullName>Into_User_Testing__c</fullName>
    <label>Into User Testing</label>
    <type>Date</type>
</CustomField>