unpackaged/main/default/objects/Request__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <formula>if(OR(ispickval(Stage__c,&#39;Complete&#39;),ispickval(Stage__c,&#39;Cancelled - Business Unit&#39;),ispickval(Stage__c,&#39;Cancelled - Business Systems Team&#39;)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCompleted</label>
    <type>Checkbox</type>
</CustomField>