unpackaged/main/default/objects/Request__c/fields/Legacy_LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>Legacy_LastModifiedDate__c</fullName>
    <label>Legacy LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>