unpackaged/main/default/objects/Request__c/fields/Legacy_RequestNumber__c.field-meta.xml
<CustomField>
    <fullName>Legacy_RequestNumber__c</fullName>
    <description>This field will hold the old request number to help analyze and review past requests.</description>
    <label>Legacy RequestNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>