unpackaged/main/default/objects/Request__c/fields/Needs_Dev_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Needs_Dev_Estimate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R163974, R1814758</description>
    <label>Needs Dev</label>
    <type>Checkbox</type>
</CustomField>