unpackaged/main/default/objects/Request__c/fields/Needs_Grooming__c.field-meta.xml
<CustomField>
    <fullName>Needs_Grooming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R163974</description>
    <label>Needs Grooming</label>
    <type>Checkbox</type>
</CustomField>