unpackaged/main/default/objects/Request__c/fields/Needs_Requirement_Signoff__c.field-meta.xml
<CustomField>
    <fullName>Needs_Requirement_Signoff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R1811423</description>
    <inlineHelpText>User Stories/Requirements must be populated in order to submit for approval</inlineHelpText>
    <label>Needs Requirement Signoff</label>
    <type>Checkbox</type>
</CustomField>