unpackaged/main/default/objects/Request__c/fields/New_or_Existing__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing__c</fullName>
    <label>New or Existing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Existing</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>