unpackaged/main/default/objects/Request__c/fields/Parent_Request__c.field-meta.xml
<CustomField>
    <fullName>Parent_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Request</label>
    <referenceTo>Request__c</referenceTo>
    <relationshipLabel>Related Requests</relationshipLabel>
    <relationshipName>Related_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>