unpackaged/main/default/objects/Request__c/fields/Peer_Review__c.field-meta.xml
<CustomField>
    <fullName>Peer_Review__c</fullName>
    <label>Peer Review</label>
    <type>Date</type>
</CustomField>