unpackaged/main/default/objects/Request__c/fields/Prioritized__c.field-meta.xml
<CustomField>
    <fullName>Prioritized__c</fullName>
    <label>Prioritized</label>
    <type>Date</type>
</CustomField>