unpackaged/main/default/objects/Request__c/fields/Priority_Notes__c.field-meta.xml
<CustomField>
    <fullName>Priority_Notes__c</fullName>
    <label>Priority Notes</label>
    <type>TextArea</type>
</CustomField>