unpackaged/main/default/objects/Request__c/fields/Production_Details__c.field-meta.xml
<CustomField>
    <fullName>Production_Details__c</fullName>
    <description>Created for request R151691</description>
    <label>Git Link/Production Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>