unpackaged/main/default/objects/Request__c/fields/Report_Dashboard_Links__c.field-meta.xml
<CustomField>
    <fullName>Report_Dashboard_Links__c</fullName>
    <inlineHelpText>Please provide link(s) to existing report(s)/dashboard(s) to be updated</inlineHelpText>
    <label>Report/Dashboard Link(s)</label>
    <type>TextArea</type>
</CustomField>