unpackaged/main/default/objects/Request__c/fields/Request_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Due_Date__c</fullName>
    <label>Requested Due Date</label>
    <type>Date</type>
</CustomField>