unpackaged/main/default/objects/Request__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <description>R178186</description>
    <formula>Id</formula>
    <label>Request ID</label>
    <type>Text</type>
</CustomField>