unpackaged/main/default/objects/Request__c/fields/Request_Record_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Request_Record_Type_Formula__c</fullName>
    <description>Request Record Type needed in formula format for use as an option drop-down in report bucketing.</description>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Record Type (Formula)</label>
    <type>Text</type>
</CustomField>