unpackaged/main/default/objects/Request__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User is Inactive or doesn&#39;t exist</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>