unpackaged/main/default/objects/Request__c/fields/RequestFeedbackURL__c.field-meta.xml
<CustomField>
    <fullName>RequestFeedbackURL__c</fullName>
    <description>R178186</description>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))+&#39;/flow/RequestFeedback?rId=&#39;&amp;Request_ID__c&amp;&#39;&amp;retURL=&#39;&amp;Request_ID__c, &#39;Give Feedback on the Request Process&#39;)</formula>
    <label>RequestFeedbackURL</label>
    <type>Text</type>
</CustomField>