unpackaged/main/default/objects/Request__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Systems Team Resolved</fullName>
            </value>
            <value>
                <fullName>User Resolved</fullName>
            </value>
            <value>
                <fullName>Not Resolved</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>