unpackaged/main/default/objects/Request__c/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <formula>(Into_Development__c - Submitted__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Minutes from time request was submitted to time it was picked up by Business Systems team.</inlineHelpText>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>