unpackaged/main/default/objects/Request__c/fields/Sandbox_Details__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Details__c</fullName>
    <description>Created for request R151691</description>
    <label>Sandbox Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>