unpackaged/main/default/objects/Request__c/fields/Sandbox_Name__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Name__c</fullName>
    <description>Created for request R151691,R1811423</description>
    <label>Sandbox Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>