unpackaged/main/default/objects/Request__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <label>Scheduled</label>
    <type>Date</type>
</CustomField>