unpackaged/main/default/objects/Request__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <inlineHelpText>1: Systems are not accessible for 2+ users.
2: Systems not accessible for one user.
3: Systems are working, not fully operational, no workaround.
4: Systems working, not fully operational, have workaround.
5: Low to no impact.</inlineHelpText>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Systems are not accessible for 2+ users.</fullName>
            </value>
            <value>
                <fullName>2 - Systems not accessible for one user.</fullName>
            </value>
            <value>
                <fullName>3 - Systems are working, not fully operational, no workaround.</fullName>
            </value>
            <value>
                <fullName>4 - Systems working, not fully operational, have workaround.</fullName>
            </value>
            <value>
                <fullName>5 - Low to no impact.</fullName>
            </value>
            <value>
                <fullName>High (many users affected)</fullName>
            </value>
            <value>
                <fullName>Medium (5 or less users affected)</fullName>
            </value>
            <value>
                <fullName>Low (one user affected)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>