unpackaged/main/default/objects/Request__c/fields/Severity_Value__c.field-meta.xml
<CustomField>
    <fullName>Severity_Value__c</fullName>
    <formula>value(left(text(Severity__c),1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Severity # Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>