unpackaged/main/default/objects/Request__c/fields/Sprint__c.field-meta.xml
<CustomField>
    <fullName>Sprint__c</fullName>
    <inlineHelpText>First day of sprint that enhancement will be worked on.</inlineHelpText>
    <label>Sprint</label>
    <type>Date</type>
</CustomField>