unpackaged/main/default/objects/Request__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Needs Grooming</fullName>
            </value>
            <value>
                <fullName>Grooming</fullName>
            </value>
            <value>
                <fullName>Groomed</fullName>
            </value>
            <value>
                <fullName>Awaiting Requirements Sign-off</fullName>
            </value>
            <value>
                <fullName>Requirements Signed Off</fullName>
            </value>
            <value>
                <fullName>Estimated</fullName>
            </value>
            <value>
                <fullName>Prioritized</fullName>
            </value>
            <value>
                <fullName>Developing</fullName>
            </value>
            <value>
                <fullName>Finance Approval Requested</fullName>
            </value>
            <value>
                <fullName>Peer Review</fullName>
            </value>
            <value>
                <fullName>User Acceptance Testing</fullName>
            </value>
            <value>
                <fullName>UAT Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On Hold: Requester</fullName>
            </value>
            <value>
                <fullName>On Hold: Business Systems</fullName>
            </value>
            <value>
                <fullName>On Hold: Vendor</fullName>
            </value>
            <value>
                <fullName>Cancelled - Business Unit</fullName>
            </value>
            <value>
                <fullName>Cancelled - Business Systems Team</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Finance Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>