unpackaged/main/default/objects/Request__c/fields/Submitted__c.field-meta.xml
<CustomField>
    <fullName>Submitted__c</fullName>
    <label>Submitted</label>
    <type>DateTime</type>
</CustomField>