unpackaged/main/default/objects/Request__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <formula>datevalue(Submitted__c)</formula>
    <label>Submitted</label>
    <type>Date</type>
</CustomField>