unpackaged/main/default/objects/Request__c/fields/System_s_Impacted__c.field-meta.xml
<CustomField>
    <fullName>System_s_Impacted__c</fullName>
    <label>System(s) Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>APM App</fullName>
            </value>
            <value>
                <fullName>Avalara</fullName>
            </value>
            <value>
                <fullName>Biz App</fullName>
            </value>
            <value>
                <fullName>Bizible</fullName>
            </value>
            <value>
                <fullName>Cirrus Insight</fullName>
            </value>
            <value>
                <fullName>Conga</fullName>
            </value>
            <value>
                <fullName>Demand Tools</fullName>
            </value>
            <value>
                <fullName>Desk.com</fullName>
            </value>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>EchoSign</fullName>
            </value>
            <value>
                <fullName>Marketo</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
            <value>
                <fullName>MyCase App</fullName>
            </value>
            <value>
                <fullName>Okta</fullName>
            </value>
            <value>
                <fullName>Pingdom</fullName>
            </value>
            <value>
                <fullName>SalesVue</fullName>
            </value>
            <value>
                <fullName>ShoreTel</fullName>
            </value>
            <value>
                <fullName>SnapEngage</fullName>
            </value>
            <value>
                <fullName>Spanning/Backup</fullName>
            </value>
            <value>
                <fullName>Survey Gizmo</fullName>
            </value>
            <value>
                <fullName>Zuora</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Coupa</fullName>
            </value>
            <value>
                <fullName>Intacct</fullName>
            </value>
            <value>
                <fullName>Nexonia</fullName>
            </value>
            <value>
                <fullName>Expensify</fullName>
            </value>
            <value>
                <fullName>Workday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>