unpackaged/main/default/objects/Request__c/fields/Testing_Steps__c.field-meta.xml
<CustomField>
    <fullName>Testing_Steps__c</fullName>
    <description>Created by request R151691</description>
    <label>Testing Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>